--- a/css/home.css
+++ b/css/home.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  font-family: var(--main-font-family), sans-serif;
+  font-family: var(--accent-font-family), sans-serif;
+  font-weight: 400;
 }
 
 @media only screen and (min-width: 391px) and (max-width: 1024px) {
@@ -83,6 +84,16 @@ html {
 }
 /*!==================================================
 /* Default style */
+h1,
+h2 {
+  font-family: var(--main-font-family);
+  font-weight: 400;
+}
+
+p {
+  font-family: var(--accent-font-family);
+  font-weight: 400;
+}
 
 .btn {
   display: block;
@@ -654,9 +665,7 @@ html {
 }
 
 .hero-title {
-  font-family: var(--main-font-family);
   font-size: 48px;
-  font-weight: 400;
   line-height: 0.77;
   text-align: center;
 
@@ -702,12 +711,9 @@ html {
 }
 
 .collection-title {
-  font-family: var(--main-font-family);
   font-size: 30px;
-  font-weight: 400;
   line-height: 1.6;
   text-align: center;
-
   color: var(--title-color);
 }
 
@@ -747,9 +753,7 @@ html {
 }
 
 .collection-text {
-  font-family: var(--accent-font-family);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.6;
 
   margin-top: 32px;
@@ -850,12 +854,9 @@ html {
 }
 
 .exclusive-deals-title {
-  font-family: var(--main-font-family);
   font-size: 30px;
-  font-weight: 400;
   line-height: 1.3;
   text-align: center;
-
   color: var(--title-color);
 }
 
@@ -1180,11 +1181,8 @@ html {
 }
 
 .list-title {
-  font-family: var(--main-font-family);
-  font-weight: 400;
   font-size: 24px;
   line-height: 1.3;
-
   color: var(--subtitle-color);
 
   text-align: center;
@@ -1210,14 +1208,11 @@ html {
 /* Our blog */
 
 .our-blog-title {
-  font-family: var(--main-font-family);
   font-size: 30px;
-  font-weight: 400;
   line-height: 1.3;
-
   color: rgba(59, 97, 154, 1);
-  text-align: center;
 
+  text-align: center;
   margin-top: 80px;
   margin-bottom: 32px;
 }
@@ -1249,10 +1244,9 @@ html {
   font-size: 20px;
   font-weight: 700;
   line-height: 1.5;
+  color: var(--title-color);
 
   margin-top: 32px;
-
-  color: rgba(59, 97, 154, 1);
   text-align: left;
 }
 
