--- a/css/contact.css
+++ b/css/contact.css
@@ -646,6 +646,10 @@ html {
   line-height: 1.17;
 }
 
+.sign-in__subtext.area {
+  display: block;
+}
+
 input {
   width: 100%;
   padding: 12px 16px;
