--- a/css/home.css
+++ b/css/home.css
@@ -953,7 +953,7 @@ p {
 .card-wrapper {
   display: flex;
   gap: 30px;
-  align-items: baseline;
+  align-items: center;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
