--- a/css/contact.css
+++ b/css/contact.css
@@ -807,6 +807,11 @@ input::placeholder {
   background-color: var(--bg-color);
 }
 
+.container-footer {
+  padding-top: 24px;
+  padding-bottom: 32px;
+}
+
 .footer-list {
   display: flex;
   flex-direction: column;
@@ -839,8 +844,17 @@ input::placeholder {
 }
 
 .social-networks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-left: auto;
   margin-top: -30px;
+  gap: 16px;
+}
+
+.logo.footer {
+  width: 77px;
+  height: 47px;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
@@ -883,7 +897,6 @@ input::placeholder {
 
   text-align: center;
   margin-top: 40px;
-  padding-bottom: 32px;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
