--- a/css/home.css
+++ b/css/home.css
@@ -1371,7 +1371,7 @@ p {
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .footer-wrapper {
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     margin-left: 124px;
   }
@@ -1408,6 +1408,7 @@ p {
   .list-social-wrapper {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: center;
   }
 
   .list-social::before {
