--- a/css/home.css
+++ b/css/home.css
@@ -1411,8 +1411,7 @@ p {
     display: flex;
     flex-direction: row-reverse;
     justify-content: stretch;
-  
-
+  }
   .list-social::before {
     display: none;
   }
