--- a/css/contact.css
+++ b/css/contact.css
@@ -579,6 +579,61 @@ html {
   line-height: 1.17;
 }
 
+.click-category {
+  position: relative;
+  display: none;
+}
+
+.click-category.openCategory {
+  display: block;
+}
+
+.click-category__list {
+  position: absolute;
+  top: 1.7em;
+  left: -3em;
+
+  padding: 24px;
+  background-color: var(--main-color);
+  border-radius: 10px;
+}
+
+.click-category__item {
+  margin-bottom: 16px;
+}
+
+.click-category__item:last-child {
+  margin-bottom: 0;
+}
+
+.click-category__item:hover,
+.click-category__item:focus {
+  color: var(--accent-color);
+}
+
+.click-category__link {
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5em;
+  color: #272727;
+}
+
+.click-category__link:hover {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+
+.btnArrow {
+  background: transparent;
+  color: #fcfcfc;
+  border: none;
+}
+
+.btnArrow.no-rotate {
+  stroke: currentColor;
+}
+
 /*MAIN*/
 .bradcrumbs {
   display: flex;
