--- a/css/shop.css
+++ b/css/shop.css
@@ -460,6 +460,7 @@ html {
     font-weight: 700;
     line-height: 1.5em;
     color: #272727;
+    cursor: pointer;
   }
 
   .click-category__link:hover {
