--- a/css/home.css
+++ b/css/home.css
@@ -14,6 +14,9 @@
   --inter-font-family: 'Inter';
 }
 
+/*!==================================================/
+/* -----DEFAULT STYLE------ */
+
 body {
   font-family: var(--accent-font-family), sans-serif;
   font-weight: 400;
@@ -82,8 +85,7 @@ img {
 html {
   scroll-behavior: auto;
 }
-/*!==================================================
-/* Default style */
+
 h1,
 h2 {
   font-family: var(--main-font-family);
@@ -116,10 +118,10 @@ p {
   cursor: pointer;
 }
 
-/* Font-face */
+/*!==================================================/
+/* -----FONT-FACE------ */
 
-/* inter-regular */
-
+/* Inter-regular */
 @font-face {
   font-display: swap;
   font-family: Inter;
@@ -130,7 +132,7 @@ p {
     url(../fonts/Inter-Regular.woff2) format('woff2');
 }
 
-/* candal-regular - latin */
+/* Candal-regular */
 @font-face {
   font-display: swap;
   font-family: Candal;
@@ -141,6 +143,7 @@ p {
     url(../fonts/candal-v15-latin-regular.woff2) format('woff2');
 }
 
+/* LiberationSans-regular */
 @font-face {
   font-display: swap;
   font-family: LiberationSans;
@@ -151,6 +154,7 @@ p {
     url(../fonts/LiberationSans-Regular.woff2) format('woff2');
 }
 
+/* LiberationSans-normal */
 @font-face {
   font-display: swap;
   font-family: LiberationSans;
@@ -161,6 +165,7 @@ p {
     url(../fonts/LiberationSans-Regular.woff2) format('woff2');
 }
 
+/* SF Pro Text-normal */
 @font-face {
   font-display: swap;
   font-family: SF Pro Text;
@@ -171,6 +176,8 @@ p {
     url(../fonts/SF-Pro-Text-Bold.woff2) format('woff2');
 }
 
+/*!=================================================*/
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -180,8 +187,6 @@ p {
   min-width: 358px;
   /* outline: 1px solid red; */
 }
-
-/*!=================================================*/
 
 @media only screen and (min-width: 391px) and (max-width: 1024px) {
   .container {
@@ -198,6 +203,9 @@ p {
     padding-right: 80px;
   }
 }
+
+/*!=================================================*/
+/* -----HEADER----- */
 
 .container-flex {
   display: flex;
@@ -646,7 +654,8 @@ p {
   line-height: 1.17;
 }
 
-/*SECTION HERO */
+/*!==================================================*/
+/*-----SECTION HERO------*/
 
 .hero {
   background-image: url('../img/background/bird.jpg');
@@ -705,7 +714,8 @@ p {
   color: #272727;
 }
 
-/* SECTION COLLECTION */
+/*!==================================================*/
+/* ----SECTION COLLECTION----- */
 .collection {
   padding-top: 80px;
 }
@@ -832,7 +842,8 @@ p {
   }
 }
 
-/* SECTION EXLUZIVE-DEALS */
+/*!==================================================*/
+/* -------SECTION EXLUZIVE-DEALS------- */
 
 .exclusive-deals {
   margin-top: 80px;
@@ -984,7 +995,8 @@ p {
   }
 }
 
-/* Section gallery */
+/*!==================================================*/
+/* ------SECTION GALLERY------ */
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .galery {
@@ -1157,13 +1169,13 @@ p {
   width: 100%;
   height: 34px;
 
-  background: var(--accent-color);
+  background-color: var(--accent-color);
 }
 .collection-btn:hover,
 .collection-btn:focus,
 .btn-card-add:hover,
 .btn-card-add:focus {
-  background: #b5e5f3;
+  background-color: #b5e5f3;
   color: #272727;
 }
 
@@ -1211,7 +1223,8 @@ p {
   stroke: rgba(39, 39, 39, 1);
 }
 
-/* Our blog */
+/*!==================================================*/
+/* --------SECTION OUR BLOG-------- */
 
 .our-blog-title {
   font-size: 30px;
@@ -1291,7 +1304,8 @@ p {
   }
 }
 
-/* FOOTER */
+/*!==================================================*/
+/* ------FOOTER------- */
 
 .footer {
   background-color: var(--bg-color);
