--- a/css/product-card.css
+++ b/css/product-card.css
@@ -175,3 +175,654 @@ p {
     url(../fonts/SF-Pro-Text-Bold.woff) format('woff'),
     url(../fonts/SF-Pro-Text-Bold.woff2) format('woff2');
 }
+
+/*!=================================================*/
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  min-width: 358px;
+  /* outline: 1px solid red; */
+}
+
+@media only screen and (min-width: 391px) and (max-width: 1024px) {
+  .container {
+    min-width: 391px;
+    margin-left: 0;
+    padding: 16px 40px;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
+  .container {
+    min-width: 1025px;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+/*!=================================================*/
+/* -----HEADER----- */
+
+.container-flex {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.container-flex.top {
+  padding: 0 26px;
+  position: relative;
+}
+
+.navigation-logo {
+  padding-top: 16px;
+}
+
+.navigation {
+  background-color: var(--bg-color);
+  min-width: 390px;
+}
+
+.navigation-search {
+  display: none;
+}
+
+.navigation-search-link {
+  margin-left: 16px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.Search {
+  fill: white;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .navigation-search-container {
+    position: relative;
+    top: -8px;
+    right: -77px;
+  }
+  .navigation-search {
+    display: block;
+    width: 325px;
+    height: 40px;
+
+    color: var(--grey-color);
+    font-family: var(--accent-font-family);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.17;
+
+    padding-left: 34px;
+    border-radius: 8px;
+    background: var(--main-color);
+  }
+  .navigation-search-link {
+    display: none;
+  }
+
+  .navigation-search::placeholder {
+    color: var(--grey-color);
+    font-family: var(--accent-font-family);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.17;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
+  .navigation-search-container {
+    right: 0;
+    /* margin-left: 89px; */
+  }
+}
+
+.navigation-main-list {
+  display: none;
+}
+
+.btnArrow {
+  background: transparent;
+  color: #fcfcfc;
+  border: none;
+}
+
+.btnArrow.no-rotate {
+  stroke: currentColor;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
+  .navigation-main-list {
+    display: flex;
+    margin-right: auto;
+    gap: 72px;
+    margin-left: 6em;
+  }
+  .navigation-main-list__item-link {
+    color: var(--main-color);
+    font-family: var(--accent-font-family);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .navigation-main-list__item-link:hover,
+  .navigation-main-list__item-link:focus {
+    color: var(--hover-color);
+    text-decoration: underline;
+  }
+}
+
+.search-icon {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .search-icon {
+    display: block;
+    position: absolute;
+    top: 12px;
+    left: 20px;
+    transform: translate(-50%);
+  }
+}
+
+.navigation-top {
+  padding-top: 14px;
+}
+
+@media only screen and (min-width: 391px) and (max-width: 1925px) {
+  .navigation-top {
+    display: none;
+    overflow: hidden;
+  }
+}
+
+.navigation-top__list {
+  display: inline-flex;
+  gap: 7.4px;
+}
+
+.navigation-top__time::after {
+  content: '';
+
+  position: absolute;
+  top: -14px;
+  left: 115px;
+
+  width: 153.43px;
+  height: 32px;
+  background-color: var(--black-color);
+  border-radius: 0 0 20px 20px;
+
+  display: inline-block;
+}
+
+.navigation-top__time {
+  display: inline;
+
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 1.3;
+
+  text-align: center;
+
+  color: var(--main-color);
+}
+
+.navigation-list {
+  display: flex;
+  gap: 16px;
+  padding-top: 16px;
+  padding-bottom: 29px;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .navigation-list {
+    margin-left: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1770px) {
+  .list-item.last {
+    margin-right: 128px;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .list-item.last {
+    margin-right: 0;
+  }
+}
+
+.list-item__link {
+  position: relative;
+}
+
+.list-item__number {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  border-radius: 50px;
+  background: var(--red-color);
+
+  font-size: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: var(--inter-font-family);
+  font-weight: 400;
+  line-height: 100%;
+
+  width: 14px;
+  height: 14px;
+  color: var(--main-color);
+  margin: 0 auto;
+}
+
+.burger-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1924px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .click-category {
+    position: relative;
+    display: none;
+  }
+
+  .click-category.openCategory {
+    display: block;
+  }
+
+  .click-category__list {
+    position: absolute;
+    top: 1.7em;
+    left: -3em;
+
+    padding: 24px;
+    background-color: var(--main-color);
+    border-radius: 10px;
+  }
+
+  .click-category__item {
+    margin-bottom: 16px;
+  }
+
+  .click-category__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .click-category__item:hover,
+  .click-category__item:focus {
+    color: var(--accent-color);
+  }
+
+  .click-category__link {
+    font-family: var(--accent-font-family);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.5em;
+    color: #272727;
+  }
+
+  .click-category__link:hover {
+    color: var(--accent-color);
+    text-decoration: underline;
+  }
+}
+
+.social-icon {
+  fill: var(--main-color);
+  stroke: #16344c;
+}
+
+.social-icon:hover,
+.social-icon:focus {
+  fill: #b5e5f3;
+  stroke: var(--main-color);
+}
+
+/*!==================================================*/
+/* BURGER MENU */
+
+.menu-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.menu-mobile-wrapper > .navigation-logo {
+  position: absolute;
+  top: -17px;
+  left: 16px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1924px) {
+  .menu-mobile-wrapper > .navigation-logo {
+    top: 15px;
+    left: 40px;
+  }
+}
+
+.menu-container.js-open-menu {
+  display: block;
+  padding-top: 60px;
+  z-index: 1;
+}
+
+@media only screen and (min-width: 391px) and (max-width: 1770px) {
+  .menu-container.js-open-menu {
+    padding-top: 0;
+  }
+}
+
+.menu-mobile-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  position: relative;
+  height: 100%;
+  padding-top: 144px;
+  padding-bottom: 452px;
+  background-color: #16344c;
+}
+
+.menu-mobile-wrapper > ul {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu-mobile-wrapper > ul > li:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-mobile-wrapper > ul > li > a {
+  color: var(--main-color);
+  font-family: var(--accent-font-family);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.16;
+}
+
+.menu-mobile-wrapper > ul > li > a:hover,
+.menu-mobile-wrapper > ul > li > a:focus {
+  color: #b5e5f3;
+}
+
+.btn-close {
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+
+  position: absolute;
+  top: 4px;
+  right: 18px;
+}
+
+.btn-close__icon {
+  fill: var(--main-color);
+}
+
+.btn-close__icon:hover,
+.btn-close__icon:focus {
+  fill: #b5e5f3;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .btn-close {
+    top: 35px;
+    right: 40px;
+  }
+}
+
+.modal-search-wrapper {
+  display: none;
+}
+
+.modal-search-wrapper.no-hidden {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(25, 25, 25, 0.49);
+}
+
+.modal {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  /* max-width: 390px; */
+  padding-left: 16px;
+}
+
+.modal-search {
+  position: relative;
+}
+.modal-search-text {
+  padding: 10px 65px;
+  border-radius: 8px;
+
+  background: var(--main-color);
+
+  color: var(--grey-color);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.modal-search > .search-icon-modal {
+  position: absolute;
+  top: 1px;
+  left: 24px;
+}
+
+.btn-search {
+  position: absolute;
+  top: -1px;
+  left: 7px;
+  padding: 1px 12px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.modal-search-text::placeholder {
+  color: var(--grey-color);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.button-heart,
+.button-solid {
+  border: none;
+  background-color: transparent;
+}
+
+.heart {
+  stroke: black;
+  fill: white;
+}
+
+.heart:hover,
+.heart:focus {
+  stroke: var(--title-color);
+}
+
+/*!==================================================*/
+/* ------FOOTER------- */
+
+.footer {
+  background-color: var(--bg-color);
+}
+
+.container-footer {
+  padding-top: 24px;
+  padding-bottom: 32px;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  margin-top: 32px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-list {
+    flex-direction: row;
+    gap: 32px;
+    margin-top: 0;
+  }
+}
+
+.footer-link {
+  color: rgba(252, 252, 252, 1);
+  text-decoration: none;
+
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  color: #b5e5f3;
+}
+
+.social-networks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-top: -30px;
+  gap: 16px;
+}
+
+.logo.footer {
+  width: 77px;
+  height: 47px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .social-networks {
+    margin-left: 23em;
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .logo.footer {
+    margin-top: 32px;
+    width: 156.86px;
+    height: 96px;
+  }
+}
+
+.footer-list-networks {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-wrapper {
+  display: flex;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-wrapper {
+    display: flex;
+    justify-content: end;
+    margin-left: 124px;
+  }
+}
+
+.footer-text {
+  font-family: var(--accent-font-family);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.13;
+
+  color: rgba(252, 252, 252, 1);
+
+  text-align: center;
+  margin-top: 40px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .footer-text {
+    margin-right: 19em;
+  }
+}
+
+.list-social::before {
+  content: '';
+
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(252, 252, 252, 1);
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .list-social-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: stretch;
+  }
+  .list-social::before {
+    display: none;
+  }
+}
+
+.list-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+
+  margin-top: 40px;
+}
+.social-icon {
+  fill: var(--main-color);
+  stroke: #16344c;
+}
+
+.social-icon:hover,
+.social-icon:focus {
+  fill: #b5e5f3;
+  stroke: var(--main-color);
+}
