--- a/css/product-card.css
+++ b/css/product-card.css
@@ -682,6 +682,50 @@ p {
 }
 
 /*!==================================================*/
+/*--------MAIN--------*/
+.bradcrumbs {
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.bradcrumbs__link {
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.bradcrumbs__link:visited {
+  color: #000000;
+}
+
+.bradcrumbs__link:hover,
+.bradcrumbs__link:focus {
+  text-decoration: underline;
+  text-decoration-color: #000000;
+}
+
+.bradcrumbs__link.bold {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+
+  font-weight: 700;
+  line-height: 1.5;
+  color: var(--black-color);
+}
+
+.bradcrumbs__link.privacy {
+  line-height: 1.5;
+}
+
+.bradcrumbs span {
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+/*!==================================================*/
 /* ------FOOTER------- */
 
 .footer {
