--- a/css/product-card.css
+++ b/css/product-card.css
@@ -745,7 +745,7 @@ fieldset {
   width: 24px;
   height: 24px;
   margin-right: 8px;
-  border: 1px solid var(--bg-color);
+  border: 1px solid var(--accent-color);
   border-radius: 5px;
 }
 
