--- a/css/product-card.css
+++ b/css/product-card.css
@@ -886,10 +886,21 @@ fieldset {
 
 .button {
   padding: 4px 11px;
-  border: 1px solid var(--accent-color);
+  border-top: 0;
+  border-bottom: 0;
   border-radius: 2px;
   background-color: transparent;
   cursor: pointer;
+}
+
+.button.minus {
+  border-left: 0;
+  border-right: 1px solid var(--accent-color);
+}
+
+.button.plus {
+  border-left: 1px solid var(--accent-color);
+  border-right: 0;
 }
 
 .button__number {
