added style buttons-select

--- a/css/product-card.css
+++ b/css/product-card.css
@@ -939,6 +939,9 @@ fieldset {
   font-weight: 400;
 }
 
+.buttons-select {
+  display: flex;
+}
 /*!==================================================*/
 /* ------FOOTER------- */
 
