--- a/css/product-card.css
+++ b/css/product-card.css
@@ -945,8 +945,19 @@ fieldset {
 
 /* Table */
 
-thead {
-  vertical-align: middle;
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  text-align: left;
+  border-bottom: 1px solid black;
+}
+
+td {
+  padding: 8px 0;
 }
 
 /*!==================================================*/
